# ami-helper

./: Agents.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  python-tests.yml
ami-helper/: pyproject.toml
src/ami_helper/: __main__.py  ami.py  datamodel.py  rucio.py  ruicio.py  utils.py
tests/: conftest.py  test_ami.py  test_datamodel.py
